--- a/index.html
+++ b/index.html
@@ -3,17 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <!-- style -->
     <link rel="stylesheet" href="./dist/css/main.css">
     <title>sass painter</title>
 </head>
 <body>
+    
     <header>
         <div class='icon'>
-
+            <ul>
+                <li>
+                    <i class="fas fa-phone-alt"></i>
+                    <span>1-877-582-6735</span>
+                </li>
+                <li>
+                    <i class="fas fa-comment-alt"></i>
+                    <span>Chat</span>
+                </li>
+                <li>
+                    <i class="fas fa-user"></i>
+                    <span>Sign in</span>
+                </li>
+                <li>
+                    <i class="fas fa-shopping-cart"></i>
+                    <span>Cart</span>
+                </li>
+                <li>
+                   <select name="language" id="">
+                       <option value="en">English</option>
+                       <option value="it">Italian</option>
+                       <option value="es">Espanol</option>
+                   </select>
+                </li>
+            </ul>
         </div>
 
         <div class='menu'>
-
+            menu
         </div>
     </header>
 
