add jumbotron background

--- a/index.html
+++ b/index.html
@@ -41,11 +41,39 @@
         </div>
 
         <div class='menu'>
-            menu
+           <ul>
+               <li>
+                   <img src="./images/logo-painter.png" alt="">
+               </li>
+               <li>
+                   Products
+                </li>
+                <li>
+                    Brushes
+                 </li>
+                 <li>
+                    Welcome Tablets
+                 </li>
+                 <li>
+                    Special Offers
+                 </li>
+                 <li>
+                    Free Trials
+                 </li>
+                 <li>
+                    Businness
+                 </li>
+                 <li>
+                    Support
+                 </li>
+                 <li>
+                    Learning
+                 </li>
+           </ul>
         </div>
     </header>
 
-    <section>
+    <section class='jumbotron'>
 
     </section>
     
