add background image scroll

--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
         
     </section>
 
+    <div class='image-scroll background-scroll'>
+        
+    </div>
+
     <script src="./dist/js/main.js"></script>
 </body>
 </html>
