add second background image scroll

--- a/index.html
+++ b/index.html
@@ -230,6 +230,8 @@
         </div>
     </section>
 
+    <div class='image2-scroll background-scroll'></div>
+
     <script src="./dist/js/main.js"></script>
 </body>
 </html>
